--- a/xuecheng-plus-system/xuecheng-plus-system-api/pom.xml
+++ b/xuecheng-plus-system/xuecheng-plus-system-api/pom.xml
@@ -23,6 +23,7 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+
         <!--cloud的基础环境包-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -80,6 +81,14 @@
         <dependency>
             <groupId>com.spring4all</groupId>
             <artifactId>swagger-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
 
 
