day6 分布式文件系统实现 视频分块上传 融合 下载md5校验等 day7 配置nginx 测试模板

--- a/xuecheng-plus-media/xuecheng-plus-media-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-media/xuecheng-plus-media-api/src/main/resources/bootstrap.yml
@@ -2,6 +2,11 @@
 spring:
   application:
     name: media-api
+  servlet:
+    multipart:
+      # 设置传输大小
+      max-file-size: 20MB
+      max-request-size: 20MB
   cloud:
     nacos:
       server-addr: 192.168.101.65:8848
