day9 实现jwt令牌 网关实现认证

--- a/xuecheng-plus-content/xuecheng-plus-content-service/src/test/resources/bootstrap.yml
+++ b/xuecheng-plus-content/xuecheng-plus-content-service/src/test/resources/bootstrap.yml
@@ -4,6 +4,9 @@ spring:
   cloud:
     nacos:
       server-addr: 192.168.101.65:8848
+      discovery:
+        namespace: acan
+        group: xuecheng-plus-project
       config: #配置文件相关配置
         namespace: acan
         group: xuecheng-plus-project
