--- a/xuecheng-plus-auth/pom.xml
+++ b/xuecheng-plus-auth/pom.xml
@@ -95,6 +95,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.1</version>
+        </dependency>
 
     </dependencies>
 
