--- a/xuecheng-plus-base/pom.xml
+++ b/xuecheng-plus-base/pom.xml
@@ -6,7 +6,7 @@
         <groupId>com.xuecheng</groupId>
         <artifactId>xuecheng-plus-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-<!--        基于当前pom.xml找到父工程的pom.xml-->
+        <!--        基于当前pom.xml找到父工程的pom.xml-->
         <relativePath>../xuecheng-plus-parent</relativePath>
     </parent>
     <artifactId>xuecheng-plus-base</artifactId>
@@ -66,6 +66,7 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <!--二维码生成 识别组件-->
         <dependency>
             <groupId>com.google.zxing</groupId>
             <artifactId>core</artifactId>
@@ -88,5 +89,6 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
+
     </dependencies>
 </project>
