--- a/xuecheng-plus-orders/xuecheng-plus-orders-api/pom.xml
+++ b/xuecheng-plus-orders/xuecheng-plus-orders-api/pom.xml
@@ -99,6 +99,11 @@
             <artifactId>javase</artifactId>
             <version>3.3.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.1</version>
+        </dependency>
     </dependencies>
 
 </project>
